--- a/templates/paste.html
+++ b/templates/paste.html
@@ -132,7 +132,7 @@
             <div>
                 <input type="checkbox" name="auto_newline" id="check2" checked><label for="check2">Auto Newline</label>
                 <input type="checkbox" name="line_numbers" id="check1" checked><label for="check1">Line Numbers</label>
-                <input type="submit" value="Click Here to Paste">
+                <input type="submit" value="Click Here to Proceed">
             </div>
         </form>
         <div class="usage">
@@ -150,7 +150,7 @@
             $("#sortable").sortable();
             $("#sortable").disableSelection();
         </script>
-        &copy; 2011 paste2image.com
+        &copy; 2011 paste2image.com, <a href="https://github.com/observerss/paste2image">get source code</a>
     </div>
     </body>
 </html>
