--- a/templates/pasted.html
+++ b/templates/pasted.html
@@ -29,6 +29,7 @@
         <script>
             $("#pa").button();
         </script>
-        <p>&copy; 2011 paste2image.com
+        <p>
+        &copy; 2011 paste2image.com, <a href="https://github.com/observerss/paste2image">get source code</a>
     </body>
 </html>
