fix DejaVu option

--- a/templates/paste.html
+++ b/templates/paste.html
@@ -106,7 +106,7 @@
                 <select name="font_name">
                     <option value="Microsoft YaHei">Select a Font ...</option>
                     <option value="DejaVu Sans YuanTi Mono" selected>Yuanti MONO(方正等宽准圆)</option>
-                    <option>DejaVu Sans Mono(English)</option>
+                    <option value="DejaVu Sans Mono">DejaVu Sans Mono(English)</option>
                     <option value="TakaoPGothic">TakaoPGothic(日文字体)</option>
                     <option value="Microsoft YaHei">Microsoft YaHei(微软雅黑)</option>
                     <option value="AR PL UKai CN">AR PL UKai CN(楷体)</option>
