--- a/templates/pasted.html
+++ b/templates/pasted.html
@@ -3,8 +3,8 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <title>Paste2Image, paste text, get image</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/jquery-ui.min.js"></script>
+        <script src="/static/js/jquery.min.js"></script>
+        <script src="/static/js/jquery-ui.min.js"></script>
         <script src="/static/js/jquery.ui.selectbox.js"></script>
         <link rel="stylesheet" href="/static/css/jquery-ui.css" type="text/css" />
         <style type="text/css">
