--- a/templates/pasted.html
+++ b/templates/pasted.html
@@ -58,7 +58,7 @@
         <h2 class="ui-widget">
             <a href="/"><img src="/static/logo.png"></a>
         </h2>
-        <a href="{{ imglink }}"><img src="{{ imglink }}"/></a><p>
+        <a href="{{ imglink }}"><img alt="loading..." src="{{ imglink }}"/></a><p>
         <div class="links_container">
             <div class="left">
                 Viewer Link <input class="viewer_links" name="View Link" value="{{ viewlink }}"/>
